[package]
name = "ruml"
version = "0.1.0"
authors = ["me <me@mail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_chacha = "0.3.0"
# csv = "1.1"
# serde = "1.0.123"
# serde_derive = "1.0.123"
thiserror = "1.0.24"
